--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.31.0
-python-dotenv==1.0.0
-openai==1.3.5
-Pillow==10.0.1
-requests==2.31.0 
+streamlit>=1.31.0
+python-dotenv>=1.0.0
+openai>=1.3.5
+Pillow>=10.0.1
+requests>=2.31.0 
